// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<body>
  <div>
    <div>
      <h3>
        Widgets
      </h3>
      <div
        class="records-table"
      >
        <div>
          <table>
            <thead>
              <tr>
                <th>
                  LINK
                </th>
                <th>
                  Checkout Baz
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                data-testid="1"
              >
                <td>
                  <a
                    href="/1"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  b and then c
                </td>
              </tr>
              <tr
                data-testid="2"
              >
                <td>
                  <a
                    href="/2"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  c
                </td>
              </tr>
              <tr
                data-testid="3"
              >
                <td>
                  <a
                    href="/3"
                  >
                    LINK
                  </a>
                </td>
                <td />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[` 2`] = `
<body>
  <div>
    <div>
      <h3>
        Widgets
      </h3>
      <div
        class="records-table"
      >
        <div>
          <table>
            <thead>
              <tr>
                <th>
                  LINK
                </th>
                <th>
                  Checkout Baz
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                data-testid="1"
              >
                <td>
                  <a
                    href="/1"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  b and then c
                </td>
              </tr>
              <tr
                data-testid="2"
              >
                <td>
                  <a
                    href="/2"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  c
                </td>
              </tr>
              <tr
                data-testid="3"
              >
                <td>
                  <a
                    href="/3"
                  >
                    LINK
                  </a>
                </td>
                <td />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <h3>
        Widgets
      </h3>
      <div
        class="records-table"
      >
        <div>
          <table>
            <thead>
              <tr>
                <th>
                  LINK
                </th>
                <th>
                  Checkout Baz
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                data-testid="1"
              >
                <td>
                  <a
                    href="/1"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  <div>
                    {nestedProp:[b,c]}
                  </div>
                </td>
              </tr>
              <tr
                data-testid="2"
              >
                <td>
                  <a
                    href="/2"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  <div>
                    {nestedProp:[c]}
                  </div>
                </td>
              </tr>
              <tr
                data-testid="3"
              >
                <td>
                  <a
                    href="/3"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  <div>
                    {nestedProp:[]}
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[` 3`] = `
<body>
  <div>
    <div>
      <h3>
        Widgets
      </h3>
      <div
        class="records-table"
      >
        <div>
          <table>
            <thead>
              <tr>
                <th>
                  LINK
                </th>
                <th>
                  Checkout Baz
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                data-testid="1"
              >
                <td>
                  <a
                    href="/1"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  b and then c
                </td>
              </tr>
              <tr
                data-testid="2"
              >
                <td>
                  <a
                    href="/2"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  c
                </td>
              </tr>
              <tr
                data-testid="3"
              >
                <td>
                  <a
                    href="/3"
                  >
                    LINK
                  </a>
                </td>
                <td />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <h3>
        Widgets
      </h3>
      <div
        class="records-table"
      >
        <div>
          <table>
            <thead>
              <tr>
                <th>
                  LINK
                </th>
                <th>
                  Checkout Baz
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                data-testid="1"
              >
                <td>
                  <a
                    href="/1"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  <div>
                    {nestedProp:[b,c]}
                  </div>
                </td>
              </tr>
              <tr
                data-testid="2"
              >
                <td>
                  <a
                    href="/2"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  <div>
                    {nestedProp:[c]}
                  </div>
                </td>
              </tr>
              <tr
                data-testid="3"
              >
                <td>
                  <a
                    href="/3"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  <div>
                    {nestedProp:[]}
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <h3>
        Widgets
      </h3>
      <div
        class="records-table"
      >
        <div>
          <table>
            <thead>
              <tr>
                <th>
                  LINK
                </th>
                <th>
                  Checkout Baz
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                data-testid="1"
              >
                <td>
                  <div>
                    1
                  </div>
                </td>
                <td>
                  <div>
                    {nestedProp:[b,c]}
                  </div>
                </td>
              </tr>
              <tr
                data-testid="2"
              >
                <td>
                  <div>
                    2
                  </div>
                </td>
                <td>
                  <div>
                    {nestedProp:[c]}
                  </div>
                </td>
              </tr>
              <tr
                data-testid="3"
              >
                <td>
                  <div>
                    3
                  </div>
                </td>
                <td>
                  <div>
                    {nestedProp:[]}
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`IndexTable when the table setup is valid when all properies are included in the table (registered in headings) when a cell renderer is optionally omitted for one property (foo) should render properly 1`] = `
<body>
  <div>
    <div>
      <h3>
        Widgets
      </h3>
      <div
        class="records-table"
      >
        <div>
          <table>
            <thead>
              <tr>
                <th>
                  LINK
                </th>
                <th>
                  Foo
                </th>
                <th>
                  The Bars
                </th>
                <th>
                  Checkout Baz
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                data-testid="1"
              >
                <td>
                  <a
                    href="/1"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  <div>
                    a
                  </div>
                </td>
                <td>
                  <div>
                    1
                  </div>
                </td>
                <td>
                  b and then c
                </td>
              </tr>
              <tr
                data-testid="2"
              >
                <td>
                  <a
                    href="/2"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  <div>
                    e
                  </div>
                </td>
                <td>
                  <div>
                    11
                  </div>
                </td>
                <td>
                  c
                </td>
              </tr>
              <tr
                data-testid="3"
              >
                <td>
                  <a
                    href="/3"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  <div>
                    hello world
                  </div>
                </td>
                <td>
                  <div>
                    1
                  </div>
                </td>
                <td />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`IndexTable when the table setup is valid when all properies are included in the table (registered in headings) when all of the cell renders are omitted should render properly 1`] = `
<body>
  <div>
    <div>
      <h3>
        Widgets
      </h3>
      <div
        class="records-table"
      >
        <div>
          <table>
            <thead>
              <tr>
                <th>
                  LINK
                </th>
                <th>
                  Foo
                </th>
                <th>
                  The Bars
                </th>
                <th>
                  Checkout Baz
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                data-testid="1"
              >
                <td>
                  <div>
                    1
                  </div>
                </td>
                <td>
                  <div>
                    a
                  </div>
                </td>
                <td>
                  <div>
                    [1,2,3]
                  </div>
                </td>
                <td>
                  <div>
                    {nestedProp:[b,c]}
                  </div>
                </td>
              </tr>
              <tr
                data-testid="2"
              >
                <td>
                  <div>
                    2
                  </div>
                </td>
                <td>
                  <div>
                    e
                  </div>
                </td>
                <td>
                  <div>
                    [11,233,34]
                  </div>
                </td>
                <td>
                  <div>
                    {nestedProp:[c]}
                  </div>
                </td>
              </tr>
              <tr
                data-testid="3"
              >
                <td>
                  <div>
                    3
                  </div>
                </td>
                <td>
                  <div>
                    hello world
                  </div>
                </td>
                <td>
                  <div>
                    [1,23,34]
                  </div>
                </td>
                <td>
                  <div>
                    {nestedProp:[]}
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`IndexTable when the table setup is valid when all properies are included in the table (registered in headings) when there is a cell renderer for every property should render properly 1`] = `
<body>
  <div>
    <div>
      <h3>
        Widgets
      </h3>
      <div
        class="records-table"
      >
        <div>
          <table>
            <thead>
              <tr>
                <th>
                  LINK
                </th>
                <th>
                  Checkout Baz
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                data-testid="1"
              >
                <td>
                  <a
                    href="/1"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  b and then c
                </td>
              </tr>
              <tr
                data-testid="2"
              >
                <td>
                  <a
                    href="/2"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  c
                </td>
              </tr>
              <tr
                data-testid="3"
              >
                <td>
                  <a
                    href="/3"
                  >
                    LINK
                  </a>
                </td>
                <td />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <h3>
        Widgets
      </h3>
      <div
        class="records-table"
      >
        <div>
          <table>
            <thead>
              <tr>
                <th>
                  LINK
                </th>
                <th>
                  Checkout Baz
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                data-testid="1"
              >
                <td>
                  <a
                    href="/1"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  <div>
                    {nestedProp:[b,c]}
                  </div>
                </td>
              </tr>
              <tr
                data-testid="2"
              >
                <td>
                  <a
                    href="/2"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  <div>
                    {nestedProp:[c]}
                  </div>
                </td>
              </tr>
              <tr
                data-testid="3"
              >
                <td>
                  <a
                    href="/3"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  <div>
                    {nestedProp:[]}
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <h3>
        Widgets
      </h3>
      <div
        class="records-table"
      >
        <div>
          <table>
            <thead>
              <tr>
                <th>
                  LINK
                </th>
                <th>
                  Checkout Baz
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                data-testid="1"
              >
                <td>
                  <div>
                    1
                  </div>
                </td>
                <td>
                  <div>
                    {nestedProp:[b,c]}
                  </div>
                </td>
              </tr>
              <tr
                data-testid="2"
              >
                <td>
                  <div>
                    2
                  </div>
                </td>
                <td>
                  <div>
                    {nestedProp:[c]}
                  </div>
                </td>
              </tr>
              <tr
                data-testid="3"
              >
                <td>
                  <div>
                    3
                  </div>
                </td>
                <td>
                  <div>
                    {nestedProp:[]}
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <h3>
        Widgets
      </h3>
      <div
        class="records-table"
      >
        <div>
          <table>
            <thead>
              <tr>
                <th>
                  LINK
                </th>
                <th>
                  Foo
                </th>
                <th>
                  The Bars
                </th>
                <th>
                  Checkout Baz
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                data-testid="1"
              >
                <td>
                  <a
                    href="/1"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  combined prop: a (1,2,3)
                </td>
                <td>
                  <div>
                    1
                  </div>
                </td>
                <td>
                  b and then c
                </td>
              </tr>
              <tr
                data-testid="2"
              >
                <td>
                  <a
                    href="/2"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  combined prop: e (11,233,34)
                </td>
                <td>
                  <div>
                    11
                  </div>
                </td>
                <td>
                  c
                </td>
              </tr>
              <tr
                data-testid="3"
              >
                <td>
                  <a
                    href="/3"
                  >
                    LINK
                  </a>
                </td>
                <td>
                  combined prop: hello world (1,23,34)
                </td>
                <td>
                  <div>
                    1
                  </div>
                </td>
                <td />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</body>
`;
